# monotonic-order

./: .gitignore  ARGSORT_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  EPIC_MONOTONIC_KEYS.md  HILBERT_RESULTS.md  LEXARGSORT_RESULTS.md  MANIFEST.in  Makefile  POST_WARM_RESULTS.md  README.md  RESULTS.md  SECURITY.md  SPATIAL_RESULTS.md  STRING_RESULTS.md  THEORY.md  benchmark.py  benchmark_argsort.py  benchmark_hilbert.py  benchmark_lexargsort.py  benchmark_spatial.py  benchmark_strings.py  benchmark_warmed.py  ideal_order.c  ideal_order.h  monotonic_order.c  monotonic_order.h  pyproject.toml  setup.py  test_core.c  test_ideal_order.py  test_monotonic_order.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
src/ideal_order/: __init__.py  _api.py  _native_module.c
src/monotonic_order/: __init__.py  _api.py  _native_module.c
tests/: test_package.py
