[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idealorder"
version = "0.3.0"
description = "Compact distribution model and exact stable float64 order operations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Dmitry Sierikov" },
]
keywords = ["sorting", "statistics", "quantiles", "radix-sort", "numpy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]
build = ["build>=1", "wheel"]

[project.urls]
Repository = "https://github.com/dimaq12/order"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ideal_order = ["py.typed"]

[tool.setuptools.exclude-package-data]
ideal_order = ["*.c", "_native.cpython-*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
