[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monotonic-order"
version = "0.7.0"
description = "Stable native radix ordering for monotonic keys and compact quantile models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Dmitry Sierikov" },
]
keywords = ["sorting", "statistics", "quantiles", "radix-sort", "numpy", "hilbert-curve"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]
build = ["build>=1", "wheel"]

[project.urls]
Repository = "https://github.com/dimaq12/monotonic-order"
Issues = "https://github.com/dimaq12/monotonic-order/issues"
Changelog = "https://github.com/dimaq12/monotonic-order/blob/main/CHANGELOG.md"
Theory = "https://github.com/dimaq12/monotonic-order/blob/main/THEORY.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
monotonic_order = ["py.typed"]

[tool.setuptools.exclude-package-data]
monotonic_order = ["*.c", "_native.cpython-*.so"]

[tool.pytest.ini_options]
testpaths = ["test_monotonic_order.py", "tests"]
addopts = "-ra"
